<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="colourBox"
            type="com.plentastudio.colorgame.entity.ColourBox" />

        <variable
            name="viewModel"
            type="com.plentastudio.colorgame.ui.ColourGameViewModel" />
        <variable
            name="adapter"
            type="com.plentastudio.colorgame.adapter.ColourGameAdapter" />

<!--         <variable-->
<!--            name="onGame"-->
<!--            type="View.OnClickListener" />-->

        <import type="android.graphics.Color"/>

    </data>
<!--        android:background="@{!viewModel.isCorrect ? @color/steel_blue : Color.parseColor(viewModel.selectedColor.color)}"
-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/steel_blue"
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"
        android:color="@color/white">

        <TextView
            android:id="@+id/tv_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_wonderful"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rgb_colour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="@id/tv_header_text"
            app:layout_constraintStart_toStartOf="@id/tv_header_text"
            app:layout_constraintTop_toBottomOf="@id/tv_header_text" />

        <TextView
            android:id="@+id/tv_colour_game_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_game"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@id/tv_rgb_colour"
            app:layout_constraintStart_toStartOf="@id/tv_rgb_colour"
            app:layout_constraintTop_toBottomOf="@id/tv_rgb_colour" />

        <LinearLayout
            android:id="@+id/ll_colour_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tv_rgb_colour"
            app:layout_constraintStart_toStartOf="@id/tv_rgb_colour"
            app:layout_constraintTop_toBottomOf="@id/tv_colour_game_text">

            <Button
                android:id="@+id/btn_new_colours"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_colours"
                android:textColor="@color/steel_blue"
                android:textSize="14sp"
                android:onClick="@{() -> viewModel.starGame(viewModel.squaresNum)}"
                />


            <!-- ADDED SPACER VIEW -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <!-- ADDED SPACER VIEW -->

<!--            android:insetTop="0dp"-->
<!--            android:insetBottom="0dp"-->
<!--            android:minWidth="0dp"-->
<!--            android:minHeight="0dp"-->
                <Button
                    android:id="@+id/btn_easy"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:textColor="@color/steel_blue"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_hard"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    android:textColor="@color/steel_blue"
                    android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>